--- a/_posts/2022-07-19-casper.md
+++ b/_posts/2022-07-19-casper.md
@@ -8,4 +8,8 @@ toc:  true
 ---
 Here's some pictures of Casper, the cat:
 
-![casper](assets/Casper.png)
+![casper1](Casper1.png)
+
+![casper2](Casper2.png)
+
+![casper3](Casper3.png)
